--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.18.1",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
     "react": "^19.0.0",
